5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4074/executions/1578_2896.log
== TEST (2019-03-16 16:06:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("digite o nome: leia o nome")

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput("digite o nome: leia o nome")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 16:06:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: leia o nome")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.232792
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:07:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: leia o nome")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:07:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: leia o nome")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
